cabal-version: 1.12

name:           busboy
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/undergroundquizscene/busboy#readme>
homepage:       https://github.com/undergroundquizscene/busboy#readme
bug-reports:    https://github.com/undergroundquizscene/busboy/issues
author:         Emily Bourke
maintainer:     undergroundquizscene@protonmail.com
copyright:      Emily Bourke
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/undergroundquizscene/busboy

library
  exposed-modules:
      Lib
  other-modules:
      Database
      Paths_busboy
  hs-source-dirs:
      src
  build-depends:
      aeson,
      async,
      bytestring,
      base >=4.7 && <5,
      co-log,
      containers,
      http-client,
      http-client-tls,
      generic-lens,
      lens,
      lucid,
      scientific,
      servant,
      servant-client,
      servant-lucid,
      servant-server,
      sqlite-simple,
      text,
      time,
      vector,
      wai,
      warp
  default-language: Haskell2010

executable busboy-exe
  main-is: Main.hs
  other-modules:
      Paths_busboy
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , bytestring
    , base >=4.7 && <5
    , busboy
    , co-log
    , containers
    , http-client
    , http-client-tls
    , lucid
    , optparse-applicative
    , scientific
    , servant
    , servant-client
    , servant-lucid
    , servant-server
    , text
    , time
    , vector
    , wai
    , warp
  default-language: Haskell2010

test-suite busboy-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_busboy
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , bytestring
    , base >=4.7 && <5
    , busboy
    , containers
    , http-client
    , http-client-tls
    , lucid
    , scientific
    , servant
    , servant-client
    , servant-lucid
    , servant-server
    , text
    , time
    , vector
    , wai
    , warp
  default-language: Haskell2010
